results are now being displayed & added a counter for each player

--- a/index.css
+++ b/index.css
@@ -31,6 +31,28 @@ h1 {
     width: 250px;
 }
 
+.user, .com {
+    display: inline-block;
+    text-align: center;
+}
+.user {
+    margin-left: 30px;
+}
+
+.com {
+    margin-left: 107px;
+    margin-right: 10px;
+}
+
+.user-choice, .com-choice {
+    display: inline-block;
+    text-align: center;
+}
+
+.result {
+    text-align: center;
+}
+
 #Rock, #Paper, #Scissor{
     accent-color: #66FCF1;
 }
