--- a/index.css
+++ b/index.css
@@ -31,22 +31,12 @@ h1 {
     width: 250px;
 }
 
-.user, .com {
-    display: inline-block;
-    text-align: center;
-}
-.user {
-    margin-left: 30px;
+table {
+    width: 100%;
 }
 
-.com {
-    margin-left: 107px;
-    margin-right: 10px;
-}
-
-.user-choice, .com-choice {
-    display: inline-block;
-    text-align: center;
+td {
+    width: 50%;
 }
 
 .result {
